# hydrodata_1_0

./: .gitignore  pyproject.toml
data/ana/raw/: 736014.csv
src/hydrodata/: __init__.py  logging_config.py
src/hydrodata/cli/: main.py
src/hydrodata/core/: models.py
src/hydrodata/infrastructure/: file_storage.py  http_client.py  spatial.py
src/hydrodata/providers/: ana_client.py
