[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "hydrodata"
version = "0.1.0"
description = "Ferramenta em Python para download e processamento de dados hidrológicos da ANA e INMET."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jorge Casé" }
]
keywords = ["hidrologia", "ANA", "INMET", "geoprocessamento", "clima", "séries temporais"]

dependencies = [
  "requests>=2.32.0",
  "typer[all]>=0.15.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "black>=24.8.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0.20240914"
]

geo = [
  "geopandas>=0.13.0,<1.2.0",
  "shapely>=2.0.0"
]

[project.scripts]
hydrodata = "hydrodata.cli.main:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
pretty = true
